Mar 27 2004  devel  Fixed Mapblast map source in GPSMap, left Earthamap as the
                     default however.  (Thanks, poptix!)
Mar 26 2004  devel  Added feathered scatter plot drawing to gpsmap.  This is
                     VERY slow but produces some nice effects in combination
                     with channel coloring to show saturation in an area.
                    Tweaked feather circle center drawing
Mar 25 2004  devel  Added binary caching to gpsmap, this more than doubles
                     the speed of gpsmap when repeatedly processing the same
                     sets of XML data.
Mar 23 2004  devel  Tweaked gpsmap channel color allocation
                    Tweaked legend drawing to scale to US 11 channels if
                     there are no networks on higher channels.  This makes
                     the legend look much nicer.
Mar 22 2004  devel  Added --feather-range to gpsmap to blur network range
                     circles into invisibility.  Imagemagick is very very
                     poorly documented.
                    Fixed various other bugs in gpsmap
                    Fixed various bugs with feathering and some data sets
Mar 21 2004  devel  Additional tweaks to prism54 avs monitoring
Mar 20 2004  devel  Fixed gpsmap trying to autoscale even with user scales
                    Merged patch from Antonio Eugenio Burriel to enable AVS 
                     headers on current prism54 drivers
                    Merged patch from Scott Taylor for translucent bounding
                     rects in gpsmap
                    Merged another patch from Scott for using terraserver
                     topo maps
Mar 19 2004  devel  Merged earthamap map source support from Ryan Maple
                    Added autoscale map selection to Earthamap and Terraserver
                    Marked Mapblast and Mappoint sources as defunct
                    Added earthamap script to makefile and cvs